--- a/views/J/app/07-thank-you.html
+++ b/views/J/app/07-thank-you.html
@@ -20,6 +20,7 @@
           <div class="grid-row">
             <div class="column--three-quarters">
               <p class="alert alert-success" role="alert" style="display:none;" tabindex="-1">Your preference has been saved.</p>
+              <h2 class="h3" id="what-happens-next">What happens next</h2>
               <p>
                 It can take up to 21 days before your decision can be applied to future data releases leaving the NHS. Your preferences will be applied gradually across all organisations that use patient health information.
               </p>
@@ -28,9 +29,6 @@
               </p>
               <p>
                 You can reset your preferences at any time in the future using this service.
-              </p>
-              <p>
-                <a class="button-wire" role="button" href="/{{PROTOTYPE_URL}}/app/index">Return to start &olarr;</a>
               </p>
             </div>
           </div>
