--- a/views/J/app/07b-thank-you.html
+++ b/views/J/app/07b-thank-you.html
@@ -21,14 +21,12 @@
             <div class="column--three-quarters">
               <p class="alert alert-success" role="alert" style="display:none;" tabindex="-1">Your preference has been saved.</p>
               <p>
-                Your patient health information can be used to help improve health and care services for the future.               </p>
+                Your patient health information can be used to help improve health and care services for the future.</p>
+              <h2 class="h3" id="what-happens-next">What happens next</h2>
               <p>
-                If you have previously opted out of using your patient health information, it can take up to 21 days before your opt-out is withdrawn.               </p>
+                If you have previously opted out of using your patient health information, it can take up to 21 days before your opt-out is withdrawn.</p>
               <p>
                 You can reset your preferences at any time in the future using this service.
-              </p>
-              <p>
-                <a class="button-wire" role="button" href="/{{PROTOTYPE_URL}}/app/index">Return to start &olarr;</a>
               </p>
             </div>
           </div>
