--- a/views/J/app/07-thank-you.html
+++ b/views/J/app/07-thank-you.html
@@ -22,6 +22,10 @@
               <p class="alert alert-success" role="alert" style="display:none;" tabindex="-1">Your preference has been saved.</p>
               <div id="not-shared" class="util-visuallyhidden">
                 <p>
+                  Your health data will not be used for research and planning
+                </p>
+                <h2 class="h3" id="what-happens-next">What happens next</h2>
+                <p>
                   It can take up to 21 days before your decision can be applied to future data releases leaving the NHS. Your preference will be applied gradually across all organisations that use patient health information.
                 </p>
                 <p>
@@ -30,16 +34,23 @@
                 <p>
                   You can reset your preferences at any time in the future using this service.
                 </p>
+                <p>
+                  <a href="/{{PROTOTYPE_URL}}/app/08-survey">What did you think of this service?</a> (takes 30 seconds)
+                </p>
               </div>
               <div id="shared" class="util-visuallyhidden">
                 <p>
-                  Your patient health information can be used to help improve health and care services for the future.
+                  Your personally identifiable data can be used to help improve health and care services for the future.
                 </p>
+                <h2 class="h3" id="what-happens-next">What happens next</h2>
                 <p>
                   If you have previously opted out of using your patient health information, it can take up to 21 days before your opt-out is withdrawn.
                 </p>
                 <p>
                   You can reset your preference at any time in the future using this service.
+                </p>
+                <p>
+                  <a href="/{{PROTOTYPE_URL}}/app/08-survey">What did you think of this service?</a> (takes 30 seconds)
                 </p>
               </div>
             </div>
