add alternative pages

--- a/public/stylesheets/components/_callout.scss
+++ b/public/stylesheets/components/_callout.scss
@@ -69,6 +69,12 @@
       }
     }
   }
+
+  &.alt {
+
+    background-color: #00407d  !important;
+    color: white !important;
+  }
 }
 
 .callout--muted {
