--- a/views/J/05-how-opting-out-works.html
+++ b/views/J/05-how-opting-out-works.html
@@ -115,7 +115,7 @@
     <div class="reading-width">
       <div class="grid-row">
         <div class="column--two-thirds">
-          {{ patterns.page_nav( "Benefits of data sharing", "/" + PROTOTYPE_URL + "/04-benefits-of-data-sharing", "Register your preferences", "/" + PROTOTYPE_URL + "/06-register-your-preference" ) }}
+          {{ patterns.page_nav( "Benefits of data sharing", "/" + PROTOTYPE_URL + "/04-benefits-of-data-sharing", "Register your preference", "/" + PROTOTYPE_URL + "/06-register-your-preference" ) }}
         </div>
       </div>
     </div>
