--- a/views/J/06-register-your-preference.html
+++ b/views/J/06-register-your-preference.html
@@ -91,7 +91,7 @@
               </div>
             </div>
           </details>
-          <a role="button" class="button" title="Start Opt-out Process" href="/{{PROTOTYPE_URL}}/app/index">Register your preference</a>
+          <a role="button" class="button" title="Start Opt-out Process" href="/{{PROTOTYPE_URL}}/app/index">Start</a>
         </div>
       </div>
     </div>
