--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -17,7 +17,7 @@
       <div class="reading-width">
           <div class="grid-row">
             <div class="column--full">
-              <div class="callout callout--interruption">
+              <div class="callout callout--interruption alt">
                 <h1>How to register your preference online</h1>
                 <p>
                   For security reasons we must verify who you are before you can set your preference.
