--- a/public/stylesheets/nhsuk.css
+++ b/public/stylesheets/nhsuk.css
@@ -3647,7 +3647,7 @@ input[type=range]:focus::-ms-fill-upper {
     margin-top: 8px; }
 
 .banner {
-  background-color: #f6a623;
+  background-color: #f9b905;
   color: #000;
   font-family: "Frutiger W01", Arial, sans-serif;
   font-size: 16px;
@@ -3666,13 +3666,13 @@ input[type=range]:focus::-ms-fill-upper {
       line-height: 24px; } }
   .banner.alpha span {
     padding: 1px 5px;
-    color: #f6a623;
+    color: #f9b905;
     background-color: #000; }
   .banner a {
     color: black;
     text-decoration: underline; }
     .banner a:hover {
-      color: #f6a623;
+      color: #f9b905;
       padding: 1px 5px;
       background-color: #000; }
   .banner .page-section {
