--- a/views/J/app/index-v3.html
+++ b/views/J/app/index-v3.html
@@ -17,15 +17,12 @@
       <div class="reading-width">
           <div class="grid-row">
             <div class="column--full">
-              <div class="callout callout--interruption alt">
+              <div class="callout callout--interruption">
                 <h1>How to register your preference online</h1>
                 <p>
                   For security reasons we must verify who you are before you can set your preference.
                 </p>
-                <p>
-                  We will do this by searching for your contact details in our database in order to send you a one-time verification code.
-                </p>
-               <ul class="link-list no-margin-li">
+               <ul class="link-list no-margin">
                  <li>
                    <div class="grid-row">
                      <div class="column--one-twelth">
@@ -63,15 +60,13 @@
                  </li>
 
                </ul>
-              </div>
-
-              <p>
-                You agree to let us search for your details in our database, so that we can send you a one-time security passcode
-              </p>
                <p>
-                 <a href="/{{PROTOTYPE_URL}}/app/02-your-details" class="button" role="button">Agree and continue</a>
+                 You agree to let us search for your details in our database, so that we can send you a one-time security passcode
                </p>
-
+                <p>
+                  <a href="/{{PROTOTYPE_URL}}/app/02-your-details" class="button" role="button">Agree and continue</a>
+                </p>
+              </div>
             </div>
 
             <div class="column--three-quarters">
