--- a/public/stylesheets/components/_callout.scss
+++ b/public/stylesheets/components/_callout.scss
@@ -68,12 +68,29 @@
         margin: 0;
       }
     }
+
+    &.no-margin-li {
+
+      margin: 1em 0;
+
+      li {
+
+        margin: 0;
+      }
+    }
   }
 
   &.alt {
 
-    background-color: #00407d  !important;
-    color: white !important;
+    background-color: #003087;
+    color: white;
+
+    .number-circle {
+
+      color: $black;
+      background-color: white;
+      border: 1px solid;
+    }
   }
 }
 
