update enter your code micro copy

--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -20,10 +20,7 @@
               <div class="callout callout--interruption alt">
                 <h1>How to register your preference online</h1>
                 <p>
-                  For security reasons we must verify who you are before you can set your preference.
-                </p>
-                <p>
-                  We will do this by searching for your contact details in our database in order to send you a one-time verification code.
+                  For security reasons we must verify who you are before you can set your preference. We will do this by searching for your contact details in our database.
                 </p>
                <ul class="link-list no-margin-li">
                  <li>
@@ -33,7 +30,7 @@
                      </div>
                      <div class="column--four-fifths">
                        <h2> Enter your details</h2>
-                       Tell us your name, date of birth, postcode and NHS number.
+                       Tell us your name, date of birth, postcode and NHS number. We can then find your contact information in our patient database.
                      </div>
                    </div>
                  </li>
@@ -63,6 +60,10 @@
                  </li>
 
                </ul>
+
+               <p>
+                 No details you enter into this service will be saved. They will be used to send you a security code.
+               </p>
               </div>
 
               <p>
